02-DApp/infrastructure/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ricochet-react
  name: ricochet-react
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: ricochet-react
status:
  loadBalancer: {}
