02-DApp/infrastructure/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ricochet-react-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ricochet-react
    networking.gke.io/managed-certificates: ricochet-react
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: ricochet-react
    servicePort: 80
